# yt_image_extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  video_processor.py  yt_image_extractor.py  ytdl_img_extractor.py
utils/: helpers.py  video_processor.py
