[tool.poetry]
name = "yt_image_extractor"
version = "0.1.2"
description = "Downloads YouTube video and extracts video frames as a collection of image files"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2022.8.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
